<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/ImageLayout"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_margin="1dp"
        android:layout_height="148dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="148dp" />


        <CheckBox
            android:id="@+id/imageCheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:buttonTint="@color/white"
            android:gravity="start"
            android:padding="16dp"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>