<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradient_background_sidebar">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        app:title="@string/app_name"
        ></android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/buttonDownloadMain"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:text="@string/manage_download" />

    <Button
        android:id="@+id/buttonUploadMain"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/manage_upload" />

    <Button
        android:id="@+id/buttonImageList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/image_list" />

</LinearLayout>