<resources>

    <string name="app_name">MarsPlayAssignment</string>
    <string name="upload_activity">UploadActivity</string>
    <string name="download_activity">DownloadActivity</string>
    <string name="download_selection_activity">Select a file from the bucket</string>
    <string name="download">Download</string>
    <string name="downloadInBackground">Download In Background</string>
    <string name="manage_download">Manage downloads</string>
    <string name="upload">Upload</string>
    <string name="upload_file_in_background">Upload In Background</string>
    <string name="manage_upload">Manage uploads</string>
    <string name="image_list">Image List</string>
    <string name="upload_file">Upload a file</string>
    <string name="upload_image">Upload an image</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="pause_all">Pause all</string>
    <string name="cancel_all">Cancel all</string>
    <string name="refreshing">Refreshing</string>
    <string name="please_wait">Please wait</string>
    <string name="choose_source">Choose Source</string>
    <string name="choose_image">Choose Images</string>
    <string name="gallery_photos">Gallery/Photos</string>
    <string name="camera">Camera</string>
    <string name="ok">OK</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="to_get_going_we_need_to_access">To get going, we need to access</string>
    <string name="phone_and_storage">" \u2022 PHONE and STORAGE"</string>
    <string name="camera_permission">" \u2022 CAMERA"</string>
    <string name="security_experience">To pick images and files from file manager</string>
    <string name="external_storage_permission">External storage permission is necessary</string>
    <string name="camera_permission_message">For ensuring uploading of Images and videos from your phone gallery</string>

</resources>
